@@ -1022,12 +1022,6 @@ class ExcelToX
 
       @cells_with_formulae.each do |ref, ast|
         begin
-          # FIXME: Shouldn't need to wrap ref.fist in an array
-          inline_replacer.current_sheet_name = [ref.first]
-          inline_replacer.map(ast)
-          # If a formula references a cell containing a value, the reference is replaced with the value (e.g., if A1 := 2 and A2 := A1 + 1 then becomes: A2 := 2 + 1)
-          #require 'pry'; binding.pry if ref == [:"Outputs - Summary table", :E77]
-          value_replacer.map(ast)
           column_and_row_function_replacement.current_reference = ref.last
           if column_and_row_function_replacement.replace(ast)
             references_that_need_updating[ref] = ast
@@ -1035,6 +1029,12 @@ class ExcelToX
           if offset_replacement.replace(ast)
             references_that_need_updating[ref] = ast
           end
+          # FIXME: Shouldn't need to wrap ref.fist in an array
+          inline_replacer.current_sheet_name = [ref.first]
+          inline_replacer.map(ast)
+          # If a formula references a cell containing a value, the reference is replaced with the value (e.g., if A1 := 2 and A2 := A1 + 1 then becomes: A2 := 2 + 1)
+          #require 'pry'; binding.pry if ref == [:"Outputs - Summary table", :E77]
+          value_replacer.map(ast)
           if indirect_replacement.replace(ast)
             references_that_need_updating[ref] = ast
           end
